--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
 </head>
 <body>
     <main>
-        Monkey
+        <section id="game">
+            <time></time>
+            <p></p>
+            <input autofocus>
+        </section>
     </main>
 </body>
+<script src="/app.js"></script>
 </html>
