--- a/index.html
+++ b/index.html
@@ -13,7 +13,14 @@
             <p></p>
             <input autofocus>
         </section>
+        <section id="results">
+            <h2>wpm</h2>
+            <h3></h3>
+
+            <h2>accuracy</h2>
+            <h3></h3>
+        </section>
     </main>
 </body>
-<script src="/app.js"></script>
+<script type="module" src="/app.js"></script>
 </html>
